--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div>
     <a href="/">
     
-    <h1><img src="/assets/logo.png" style="max-width:2%;">FIAEP - Fachinformatiker (AE / SI) Prüfungsvorbereitung</h1>
+    <h1><img src="https://avatars1.githubusercontent.com/u/59926383?s=460&v=4" style="max-width:2%;">FIAEP - Fachinformatiker (AE / SI) Prüfungsvorbereitung</h1>
     </a>
     <div class="header-links">
       <a href="/informationen"><h2 class="header-link">Allgemeine Infos</h2></a>
