--- a/index.html
+++ b/index.html
@@ -21,16 +21,12 @@
 <script type="application/ld+json">
 {"@type":"WebSite","url":"https://fiaep.github.io/","name":"Fachinformatiker (AE / SI) Prüfungsvorbereitung","headline":"Links","description":"Hier werden nützliche Links rund um das Thema Ausbildung zum Fachinformatiker gesammelt. Systemintegratoren sind selbstverständlich auch willkommen!","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-
   </head>
-
   <body>
-
    <div id="wrapper">
     <header>
   <div>
-    <a href="/">
-    
+    <a href="/">    
     <h1><img src="https://avatars1.githubusercontent.com/u/59926383?s=460&v=4" style="max-width:2%;">FIAEP - Fachinformatiker (AE / SI) Prüfungsvorbereitung</h1>
     </a>
     <div class="header-links">
@@ -39,9 +35,16 @@
 <a href="/programmierung"><h2 class="header-link">Programmierung</h2></a>
 <a href="/netzwerkadministration"><h2 class="header-link">Netzwerkadministration</h2></a>
 <a href="/links"><h2 class="header-link">Links</h2></a>
-
 </div>
   </div>
+       <div class="container">
+       <h2>Hier werden nützliche Links rund um das Thema Ausbildung zum Fachinformatiker gesammelt. Systemintegratoren sind selbstverständlich auch willkommen!</h2>
+
+        <section id="downloads">
+          
+          <a href="https://github.com/FIAEP/fiaep.github.io" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
 </header>
 
     <div class="container">
