--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <h1><img src="https://avatars1.githubusercontent.com/u/59926383?s=460&v=4" style="max-width:2%;">FIAEP - Fachinformatiker (AE / SI) Prüfungsvorbereitung</h1>
     </a>
     <div class="header-links">
-      <a href="/informationen"><h2 class="header-link">Allgemeine Infos</h2></a>
-<a href="/uebungen"><h2 class="header-link">Übungungen</h2></a>
-<a href="/programmierung"><h2 class="header-link">Programmierung</h2></a>
-<a href="/netzwerkadministration"><h2 class="header-link">Netzwerkadministration</h2></a>
-<a href="/links"><h2 class="header-link">Links</h2></a>
+      <a href="/informationen.html"><h2 class="header-link">Allgemeine Infos</h2></a>
+<a href="/uebungen.html"><h2 class="header-link">Übungungen</h2></a>
+<a href="/programmierung.html"><h2 class="header-link">Programmierung</h2></a>
+<a href="/netzwerkadministration.html"><h2 class="header-link">Netzwerkadministration</h2></a>
+<a href="/links.html"><h2 class="header-link">Links</h2></a>
 </div>
   </div>
        <div class="container">
