--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="/assets/favicon.png">
   <link href="/atom.xml" type="application/atom+xml" rel="alternate" title="ATOM Feed" /> 
   <!-- https://www.w3schools.com/howto/howto_html_include.asp -->
-  <script src="/js/w3-include-html.js"></script>
+  <script type="text/javascript" src="/js/w3-include-html.js"></script>
 
 <!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>Links | Fachinformatiker (AE / SI) Prüfungsvorbereitung</title>
