static pages with w3 includes

--- a/informationen.html
+++ b/informationen.html
@@ -26,24 +26,37 @@
   </head>
   <body>
  <div w3-include-html="header.html"></div> 
-
-    <div class="container">
+ 
+   <div class="container">
       <section id="main_content">
-	  
-	  <h1 id="links">Übungen</h1>
+<h2 id="prüfungen-baden-württemberg">Prüfungen Baden-Württemberg</h2>
 
-<h2 id="projekt-lernkarteien">Lernkarteien</h2>
 <ul>
-  <li><a href="https://fiaep.github.io/Lernkarteien/">https://fiaep.github.io/Lernkarteien (Lernkarteien)</a></li>
+  <li><a href="http://it-pruefungsbuch.mezdata.de/pruefungen/index.html">http://it-pruefungsbuch.mezdata.de/pruefungen/index.html</a></li>
 </ul>
-<h2 id="projekt-lernkarteien">Multiple Choice Tests</h2>
+<h2 id="abschlussprojekt">Abschlussprojekt</h2>
+
 <ul>
-  <li><a href="https://fiaep.github.io/quick-quiz/">https://fiaep.github.io/quick-quiz (Multiple Choice Tests)</a></li>
+  <li><a href="https://fachinformatiker-anwendungsentwicklung.net/beispiele-fuer-abschlussprojekte/">https://fachinformatiker-anwendungsentwicklung.net/beispiele-fuer-abschlussprojekte/ - Liste von AE/SI Abschlussprojekten</a></li>
+</ul>
+
+<h2 id="elektro-digital-netzwerktechnik">Elektro-Digital-Netzwerktechnik</h2>
+<ul>
+  <li><a href="https://www.arndt-bruenner.de/mathe/scripts/Zahlensysteme.htm">Umrechnung von Zahlensystemen https://www.arndt-bruenner.de/mathe/scripts/Zahlensysteme.htm</a></li>
+  <li><a href="https://www.purebasic.com/german/documentation/reference/binary.html">Arbeiten mit verschiedenen Zahlensystemen https://www.purebasic.com/german/documentation/reference/binary.html</a></li>
+  <li><a href="https://sheabunge.github.io/boolcalc/">https://sheabunge.github.io/boolcalc/ - Boolscher Algebra Rechner</a></li>
+</ul>
+
+<h2 id="bwl">BWL</h2>
+<h5 id="netzplan-technik">Netzplan-Technik</h5>
+<ul>
+  <li><a href="http://www.guenter-schwindt.de/organisation.htm">http://www.guenter-schwindt.de/organisation.htm</a> Excel Tool und mehr…</li>
+  <li><a href="https://github.com/stevoat8/NetzplanTool">https://github.com/stevoat8/NetzplanTool</a></li>
 </ul>
       </section>
-    </div>
-		
-	<div w3-include-html="footer.html"></div> 
+	</div>
+	
+	 <div w3-include-html="footer.html"></div> 
 
 <script>
 includeHTML();
