--- a/programmierung.html
+++ b/programmierung.html
@@ -26,23 +26,36 @@
   </head>
   <body>
  <div w3-include-html="header.html"></div> 
-
-    <div class="container">
+ 
+  <div class="container">
       <section id="main_content">
-	  
-	  <h1 id="links">Übungen</h1>
+<h2 id="anwendungsentwickler">Anwendungsentwickler</h2>
 
-<h2 id="projekt-lernkarteien">Lernkarteien</h2>
 <ul>
-  <li><a href="https://fiaep.github.io/Lernkarteien/">https://fiaep.github.io/Lernkarteien (Lernkarteien)</a></li>
+  <li><a href="https://marketplace.visualstudio.com/items?itemName=GitHub.GitHubExtensionforVisualStudio">Github Plugin für Visual Studio</a></li>
 </ul>
-<h2 id="projekt-lernkarteien">Multiple Choice Tests</h2>
+
+<h3 id="programmier-online-lernspiele">Programmier-Online-Lernspiele</h3>
+
 <ul>
-  <li><a href="https://fiaep.github.io/quick-quiz/">https://fiaep.github.io/quick-quiz (Multiple Choice Tests)</a></li>
+  <li><a href="https://codecombat.com">codecombat.com Spielerisch Python &amp; Javascript lernen</a></li>
+  <li><a href="https://store.steampowered.com/app/777150/Adventure_Land__The_Code_MMORPG/">Adventure Land (kostenpflichtig auf Steam)</a></li>
+  <li><a href="https://lab.reaal.me/jsrobot/">JSRobot - Javascript lernen</a></li>
+</ul>
+
+<h3 id="java-aufgaben">Java Aufgaben</h3>
+
+<ul>
+  <li><a href="http://tutego.de/javabuch/aufgaben/">http://tutego.de/javabuch/aufgaben/</a></li>
+</ul>
+<h3 id="ae-podcast">AE Podcast</h3>
+
+<ul>
+  <li><a href="https://fachinformatiker-anwendungsentwicklung.net/category/podcast/">https://fachinformatiker-anwendungsentwicklung.net/category/podcast/</a></li>
 </ul>
       </section>
-    </div>
-		
+	</div>
+	
 	<div w3-include-html="footer.html"></div> 
 
 <script>
