did some style fixes

--- a/informationen.html
+++ b/informationen.html
@@ -1,65 +1,57 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="de-DE">
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="shortcut icon" href="/assets/favicon.png">
-  <link href="/atom.xml" type="application/atom+xml" rel="alternate" title="ATOM Feed" /> 
-  <!-- https://www.w3schools.com/howto/howto_html_include.asp -->
-  <script type="text/javascript" src="/js/w3-include-html.js"></script>
-
-<!-- Begin Jekyll SEO tag v2.6.1 -->
-<title>Links | Fachinformatiker (AE / SI) Prüfungsvorbereitung</title>
-
-<meta property="og:title" content="Links" />
-<meta property="og:locale" content="en_US" />
-<meta name="description" content="Hier werden nützliche Links rund um das Thema Ausbildung zum Fachinformatiker gesammelt. Systemintegratoren sind selbstverständlich auch willkommen!" />
-<meta property="og:description" content="Hier werden nützliche Links rund um das Thema Ausbildung zum Fachinformatiker gesammelt. Systemintegratoren sind selbstverständlich auch willkommen!" />
-<link rel="canonical" href="https://fiaep.github.io/" />
-<meta property="og:url" content="https://fiaep.github.io/" />
-<meta property="og:site_name" content="Fachinformatiker (AE / SI) Prüfungsvorbereitung" />
-<script type="application/ld+json">
-{"@type":"WebSite","url":"https://fiaep.github.io/","name":"Fachinformatiker (AE / SI) Prüfungsvorbereitung","headline":"Links","description":"Hier werden nützliche Links rund um das Thema Ausbildung zum Fachinformatiker gesammelt. Systemintegratoren sind selbstverständlich auch willkommen!","@context":"https://schema.org"}</script>
-<!-- End Jekyll SEO tag -->
+	<link rel="stylesheet" href="/css/main.css">
+	<link rel="shortcut icon" href="/assets/favicon.png">
+	<link href="/atom.xml" type="application/atom+xml" rel="alternate" title="ATOM Feed" /> 
+	<!-- https://www.w3schools.com/howto/howto_html_include.asp -->
+	<script src="/js/w3-include-html.js"></script>
+	<!-- Begin Jekyll SEO tag v2.6.1 -->
+	<title>Links | Fachinformatiker (AE / SI) Prüfungsvorbereitung</title>
+	<meta property="og:title" content="Links" />
+	<meta property="og:locale" content="de_DE" />
+	<meta name="description" content="Hier werden nützliche Links rund um das Thema Ausbildung zum Fachinformatiker gesammelt. Systemintegratoren sind selbstverständlich auch willkommen!" />
+	<meta property="og:description" content="Hier werden nützliche Links rund um das Thema Ausbildung zum Fachinformatiker gesammelt. Systemintegratoren sind selbstverständlich auch willkommen!" />
+	<link rel="canonical" href="https://fiaep.github.io/" />
+	<meta property="og:url" content="https://fiaep.github.io/" />
+	<meta property="og:site_name" content="Fachinformatiker (AE / SI) Prüfungsvorbereitung" />
+	<script type="application/ld+json">
+		{"@type":"WebSite","url":"https://fiaep.github.io/","name":"Fachinformatiker (AE / SI) Prüfungsvorbereitung","headline":"Links","description":"Hier werden nützliche Links rund um das Thema Ausbildung zum Fachinformatiker gesammelt. Systemintegratoren sind selbstverständlich auch willkommen!","@context":"https://schema.org"}
+	</script>
+	<!-- End Jekyll SEO tag -->
   </head>
   <body>
- <div w3-include-html="header.html"></div> 
- 
-   <div class="container">
+	<div w3-include-html="header.html"></div>  
+	<div class="container">
       <section id="main_content">
-<h2 id="prüfungen-baden-württemberg">Prüfungen Baden-Württemberg</h2>
-
-<ul>
-  <li><a href="http://it-pruefungsbuch.mezdata.de/pruefungen/index.html">http://it-pruefungsbuch.mezdata.de/pruefungen/index.html</a></li>
-</ul>
-<h2 id="abschlussprojekt">Abschlussprojekt</h2>
-
-<ul>
-  <li><a href="https://fachinformatiker-anwendungsentwicklung.net/beispiele-fuer-abschlussprojekte/">https://fachinformatiker-anwendungsentwicklung.net/beispiele-fuer-abschlussprojekte/ - Liste von AE/SI Abschlussprojekten</a></li>
-</ul>
-
-<h2 id="elektro-digital-netzwerktechnik">Elektro-Digital-Netzwerktechnik</h2>
-<ul>
-  <li><a href="https://www.arndt-bruenner.de/mathe/scripts/Zahlensysteme.htm">Umrechnung von Zahlensystemen https://www.arndt-bruenner.de/mathe/scripts/Zahlensysteme.htm</a></li>
-  <li><a href="https://www.purebasic.com/german/documentation/reference/binary.html">Arbeiten mit verschiedenen Zahlensystemen https://www.purebasic.com/german/documentation/reference/binary.html</a></li>
-  <li><a href="https://sheabunge.github.io/boolcalc/">https://sheabunge.github.io/boolcalc/ - Boolscher Algebra Rechner</a></li>
-</ul>
-
-<h2 id="bwl">BWL</h2>
-<h5 id="netzplan-technik">Netzplan-Technik</h5>
-<ul>
-  <li><a href="http://www.guenter-schwindt.de/organisation.htm">http://www.guenter-schwindt.de/organisation.htm</a> Excel Tool und mehr…</li>
-  <li><a href="https://github.com/stevoat8/NetzplanTool">https://github.com/stevoat8/NetzplanTool</a></li>
-</ul>
+		<h2 id="prüfungen-baden-württemberg">Prüfungen Baden-Württemberg</h2>
+		<ul>
+			<li><a href="http://it-pruefungsbuch.mezdata.de/pruefungen/index.html">http://it-pruefungsbuch.mezdata.de/pruefungen/index.html</a></li>
+		</ul>
+		<h2 id="abschlussprojekt">Abschlussprojekt</h2>
+		<ul>
+			<li><a href="https://fachinformatiker-anwendungsentwicklung.net/beispiele-fuer-abschlussprojekte/">https://fachinformatiker-anwendungsentwicklung.net/beispiele-fuer-abschlussprojekte/ - Liste von AE/SI Abschlussprojekten</a></li>
+		</ul>
+		<h2 id="elektro-digital-netzwerktechnik">Elektro-Digital-Netzwerktechnik</h2>
+		<ul>
+			<li><a href="https://www.arndt-bruenner.de/mathe/scripts/Zahlensysteme.htm">Umrechnung von Zahlensystemen https://www.arndt-bruenner.de/mathe/scripts/Zahlensysteme.htm</a></li>
+			<li><a href="https://www.purebasic.com/german/documentation/reference/binary.html">Arbeiten mit verschiedenen Zahlensystemen https://www.purebasic.com/german/documentation/reference/binary.html</a></li>
+			<li><a href="https://sheabunge.github.io/boolcalc/">https://sheabunge.github.io/boolcalc/ - Boolscher Algebra Rechner</a></li>
+		</ul>
+		<h2 id="bwl">BWL</h2>
+		<h5 id="netzplan-technik">Netzplan-Technik</h5>
+		<ul>
+			<li><a href="http://www.guenter-schwindt.de/organisation.htm">http://www.guenter-schwindt.de/organisation.htm</a> Excel Tool und mehr…</li>
+			<li><a href="https://github.com/stevoat8/NetzplanTool">https://github.com/stevoat8/NetzplanTool</a></li>
+		</ul>
       </section>
-	</div>
-	
-	 <div w3-include-html="footer.html"></div> 
-
-<script>
-includeHTML();
-</script> 
+	</div>	
+	<div w3-include-html="footer.html"></div> 
+	<script>
+		includeHTML();
+	</script> 
   </body>
 </html>
