--- a/header.html
+++ b/header.html
@@ -1,5 +1,4 @@
-   <div id="wrapper">
-    <header>
+  <header>
   <div>
     <a href="/">    
     <h1><img src="https://avatars1.githubusercontent.com/u/59926383?s=460&v=4" style="max-width:2%;">FIAEP - Fachinformatiker (AE / SI) Prüfungsvorbereitung</h1>
@@ -14,6 +13,6 @@
   </div>
     <div class="container">
 		<br />
-        <h5>Hier werden nützliche Links rund um das Thema Ausbildung zum Fachinformatiker gesammelt.</h5>
+        <center><h5>Hier werden nützliche Informationen rund um das Thema "Ausbildung zum Fachinformatiker" gesammelt.</h5></center>
     </div>
 </header>
