--- a/uebungen.html
+++ b/uebungen.html
@@ -1,52 +1,45 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="de-DE">
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="shortcut icon" href="/assets/favicon.png">
-  <link href="/atom.xml" type="application/atom+xml" rel="alternate" title="ATOM Feed" /> 
-  <!-- https://www.w3schools.com/howto/howto_html_include.asp -->
-  <script type="text/javascript" src="/js/w3-include-html.js"></script>
-
-<!-- Begin Jekyll SEO tag v2.6.1 -->
-<title>Links | Fachinformatiker (AE / SI) Prüfungsvorbereitung</title>
-
-<meta property="og:title" content="Links" />
-<meta property="og:locale" content="en_US" />
-<meta name="description" content="Hier werden nützliche Links rund um das Thema Ausbildung zum Fachinformatiker gesammelt. Systemintegratoren sind selbstverständlich auch willkommen!" />
-<meta property="og:description" content="Hier werden nützliche Links rund um das Thema Ausbildung zum Fachinformatiker gesammelt. Systemintegratoren sind selbstverständlich auch willkommen!" />
-<link rel="canonical" href="https://fiaep.github.io/" />
-<meta property="og:url" content="https://fiaep.github.io/" />
-<meta property="og:site_name" content="Fachinformatiker (AE / SI) Prüfungsvorbereitung" />
-<script type="application/ld+json">
-{"@type":"WebSite","url":"https://fiaep.github.io/","name":"Fachinformatiker (AE / SI) Prüfungsvorbereitung","headline":"Links","description":"Hier werden nützliche Links rund um das Thema Ausbildung zum Fachinformatiker gesammelt. Systemintegratoren sind selbstverständlich auch willkommen!","@context":"https://schema.org"}</script>
-<!-- End Jekyll SEO tag -->
+	<link rel="stylesheet" href="/css/main.css">
+	<link rel="shortcut icon" href="/assets/favicon.png">
+	<link href="/atom.xml" type="application/atom+xml" rel="alternate" title="ATOM Feed" /> 
+	<!-- https://www.w3schools.com/howto/howto_html_include.asp -->
+	<script src="/js/w3-include-html.js"></script>
+	<!-- Begin Jekyll SEO tag v2.6.1 -->
+	<title>Übungen | Fachinformatiker (AE / SI) Prüfungsvorbereitung</title>
+	<meta property="og:title" content="Übungen" />
+	<meta property="og:locale" content="de_DE" />
+	<meta name="description" content="Hier werden nützliche Informationen rund um das Thema Ausbildung zum Fachinformatiker gesammelt." />
+	<meta property="og:description" content="Hier werden nützliche Informationen rund um das Thema Ausbildung zum Fachinformatiker gesammelt." />
+	<link rel="canonical" href="https://fiaep.github.io/" />
+	<meta property="og:url" content="https://fiaep.github.io/" />
+	<meta property="og:site_name" content="Fachinformatiker (AE / SI) Prüfungsvorbereitung" />
+	<script type="application/ld+json">
+		{"@type":"WebSite","url":"https://fiaep.github.io/","name":"Fachinformatiker (AE / SI) Prüfungsvorbereitung","headline":"Links","description":"Hier werden nützliche Links rund um das Thema Ausbildung zum Fachinformatiker gesammelt. Systemintegratoren sind selbstverständlich auch willkommen!","@context":"https://schema.org"}</script>
+	<!-- End Jekyll SEO tag -->
   </head>
   <body>
- <div w3-include-html="header.html"></div> 
-
+	<div w3-include-html="header.html"></div> 
     <div class="container">
       <section id="main_content">
-	  
-	  <h1 id="links">Übungen</h1>
-
-<h2 id="projekt-lernkarteien">Lernkarteien</h2>
-<ul>
-  <li><a href="https://fiaep.github.io/Lernkarteien/">https://fiaep.github.io/Lernkarteien (Lernkarteien)</a></li>
-</ul>
-<h2 id="projekt-lernkarteien">Multiple Choice Tests</h2>
-<ul>
-  <li><a href="https://fiaep.github.io/quick-quiz/">https://fiaep.github.io/quick-quiz (Multiple Choice Tests)</a></li>
-</ul>
+		<h1 id="links">Übungen</h1>
+		<h2 id="projekt-lernkarteien">Lernkarteien</h2>
+		<ul>
+			<li><a href="https://fiaep.github.io/Lernkarteien/">https://fiaep.github.io/Lernkarteien (Lernkarteien)</a></li>
+		</ul>
+		<h2 id="projekt-lernkarteien">Multiple Choice Tests</h2>
+		<ul>
+			<li><a href="https://fiaep.github.io/quick-quiz/">https://fiaep.github.io/quick-quiz (Multiple Choice Tests)</a></li>
+		</ul>
       </section>
-    </div>
-		
+    </div>	
 	<div w3-include-html="footer.html"></div> 
-
-<script>
-includeHTML();
-</script> 
+	<script>
+		includeHTML();
+	</script> 
   </body>
 </html>
