fixed some styles

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 	<!-- End Jekyll SEO tag -->
   </head>
   <body>
-	<div w3-include-html="header.html"></div> 
+	<div w3-include-html="header.html"></div>
+	<div class="container">
+      <section id="main_content">	
 	<h2 id="andere-github-projekte-mit-bezug-zum-thema-fachinformatiker">Andere github Projekte mit Bezug zum Thema Fachinformatiker</h2>
 	<ul>
 		<li><a href="https://github.com/Gurkenschreck/FIAEP/wiki/Glossar">https://github.com/Gurkenschreck/FIAEP/wiki/Glossar</a></li>
