--- a/netzwerkadministration.html
+++ b/netzwerkadministration.html
@@ -1,70 +1,60 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="de-DE">
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/css/main.css">
-  <link rel="shortcut icon" href="/assets/favicon.png">
-  <link href="/atom.xml" type="application/atom+xml" rel="alternate" title="ATOM Feed" /> 
-  <!-- https://www.w3schools.com/howto/howto_html_include.asp -->
-  <script type="text/javascript" src="/js/w3-include-html.js"></script>
-
-<!-- Begin Jekyll SEO tag v2.6.1 -->
-<title>Links | Fachinformatiker (AE / SI) Prüfungsvorbereitung</title>
-
-<meta property="og:title" content="Links" />
-<meta property="og:locale" content="en_US" />
-<meta name="description" content="Hier werden nützliche Links rund um das Thema Ausbildung zum Fachinformatiker gesammelt. Systemintegratoren sind selbstverständlich auch willkommen!" />
-<meta property="og:description" content="Hier werden nützliche Links rund um das Thema Ausbildung zum Fachinformatiker gesammelt. Systemintegratoren sind selbstverständlich auch willkommen!" />
-<link rel="canonical" href="https://fiaep.github.io/" />
-<meta property="og:url" content="https://fiaep.github.io/" />
-<meta property="og:site_name" content="Fachinformatiker (AE / SI) Prüfungsvorbereitung" />
-<script type="application/ld+json">
-{"@type":"WebSite","url":"https://fiaep.github.io/","name":"Fachinformatiker (AE / SI) Prüfungsvorbereitung","headline":"Links","description":"Hier werden nützliche Links rund um das Thema Ausbildung zum Fachinformatiker gesammelt. Systemintegratoren sind selbstverständlich auch willkommen!","@context":"https://schema.org"}</script>
-<!-- End Jekyll SEO tag -->
+	<link rel="stylesheet" href="/css/main.css">
+	<link rel="shortcut icon" href="/assets/favicon.png">
+	<link href="/atom.xml" type="application/atom+xml" rel="alternate" title="ATOM Feed" /> 
+	<!-- https://www.w3schools.com/howto/howto_html_include.asp -->
+	<script type="text/javascript" src="/js/w3-include-html.js"></script>
+	<!-- Begin Jekyll SEO tag v2.6.1 -->
+	<title>Links | Fachinformatiker (AE / SI) Prüfungsvorbereitung</title>
+	<meta property="og:title" content="Netzwerkadministion" />
+	<meta property="og:locale" content="de_DE" />
+	<meta name="description" content="Hier werden nützliche Links rund um das Thema Ausbildung zum Fachinformatiker gesammelt. Systemintegratoren sind selbstverständlich auch willkommen!" />
+	<meta property="og:description" content="Hier werden nützliche Links rund um das Thema Ausbildung zum Fachinformatiker gesammelt. Systemintegratoren sind selbstverständlich auch willkommen!" />
+	<link rel="canonical" href="https://fiaep.github.io/" />
+	<meta property="og:url" content="https://fiaep.github.io/" />
+	<meta property="og:site_name" content="Fachinformatiker (AE / SI) Prüfungsvorbereitung" />
+	<script type="application/ld+json">
+		{"@type":"WebSite","url":"https://fiaep.github.io/","name":"Fachinformatiker (AE / SI) Prüfungsvorbereitung","headline":"Links","description":"Hier werden nützliche Links rund um das Thema Ausbildung zum Fachinformatiker gesammelt. Systemintegratoren sind selbstverständlich auch willkommen!","@context":"https://schema.org"}</script>
+	<!-- End Jekyll SEO tag -->
   </head>
   <body>
- <div w3-include-html="header.html"></div> 
- 
+	<div w3-include-html="header.html"></div> 
     <div class="container">
-      <section id="main_content">
-	  <h2 id="systemintegratoren">Systemintegratoren</h2>
-
-<h3 id="tools-für-administratoren">Tools für Administratoren</h3>
-
-<ul>
-  <li><a href="https://www.forensit.com/support-downloads.html">Defprof</a> Standardprofil ohne sysprep anpassen.</li>
-  <li><a href="https://www.advanced-ip-scanner.com/de/">Advanced IP Scanner</a> kostenloser Netzwerk-Scanner zur Analyse lokaler Netzwerke</li>
-  <li><a href="https://rufus.ie/">Rufus</a> Erstellen Sie bootfähige USB-Laufwerke auf einfache Art und Weise</li>
-  <li><a href="https://www.heise.de/download/product/win32-disk-imager-92033">Win32 DiskImager</a> schreibt Disk-Images auf ein mobiles Laufwerk wie USB-Stick und SD-Karte oder kann alternativ von diesen Images erstellen</li>
-  <li><a href="https://drbl.org/download/">Clonezilla Server Edition</a>  Für größere Netzwerk, in denen man auf sehr viele Clients ein Abbild übertragen möchte, bietet sich die Clonezilla Server Edition (SE) an.</li>
-  <li><a href="https://www.sandboxie.com/">https://www.sandboxie.com/ Sandbox</a></li>
-</ul>
-
-<h3 id="android-apps-für-netzwerkadmninistratoren">Android Apps für Netzwerkadmninistratoren</h3>
-
-<ul>
-  <li><a href="https://play.google.com/store/apps/details?id=com.ubnt.usurvey&amp;hl=de">WiFiman</a></li>
-  <li><a href="https://f-droid.org/en/packages/com.aaronjwood.portauthority/">Port Authority</a></li>
-  <li><a href="https://f-droid.org/en/packages/info.lamatricexiste.network/">Network Discovery</a></li>
-  <li><a href="https://f-droid.org/en/packages/org.csploit.android/">csploit</a></li>
-</ul>
-
-<h3 id="wsl-windows-subsystem-for-linux">WSL (Windows Subsystem for Linux)</h3>
-
-<ul>
-  <li><a href="https://docs.microsoft.com/en-us/windows/wsl/install-win10">https://docs.microsoft.com/en-us/windows/wsl/install-win10</a></li>
-  <li><a href="https://github.com/mikebattista/PowerShell-WSL-Interop">https://github.com/mikebattista/PowerShell-WSL-Interop</a></li>
-  <li><a href="https://devblogs.microsoft.com/commandline/integrate-linux-commands-into-windows-with-powershell-and-the-windows-subsystem-for-linux/">https://devblogs.microsoft.com/commandline/integrate-linux-commands-into-windows-with-powershell-and-the-windows-subsystem-for-linux/</a></li>
-  <li><a href="https://github.com/sirredbeard/Awesome-WSL">https://github.com/sirredbeard/Awesome-WSL - Awesome WSL link list</a></li>
-</ul>
-  </section>
+    <section id="main_content">
+		<h2 id="netzwerkadministration">Netzwerkadministration</h2>
+		<h3 id="tools-für-administratoren">Tools für Administratoren</h3>
+		<ul>
+			<li><a href="https://www.forensit.com/support-downloads.html">Defprof</a> Standardprofil ohne sysprep anpassen.</li>
+			<li><a href="https://www.advanced-ip-scanner.com/de/"> Advanced IP Scanner</a> kostenloser Netzwerk-Scanner zur Analyse lokaler Netzwerke</li>
+			<li><a href="https://rufus.ie/">Rufus</a> Erstellen Sie bootfähige USB-Laufwerke auf einfache Art und Weise</li>
+			<li><a href="https://www.heise.de/download/product/win32-disk-imager-92033"> Win32 DiskImager</a> schreibt Disk-Images auf ein mobiles Laufwerk wie USB-Stick und SD-Karte oder kann alternativ von diesen Images erstellen</li>
+			<li><a href="https://drbl.org/download/">Clonezilla Server Edition</a> Für größere Netzwerk, in denen man auf sehr viele Clients ein Abbild übertragen möchte, bietet sich die Clonezilla Server Edition (SE) an.</li>
+			<li><a href="https://www.sandboxie.com/">https://www.sandboxie.com/</a> Sandbox</li>
+		</ul>
+		<h3 id="android-apps-für-netzwerkadmninistratoren">Android Apps für Netzwerkadmninistratoren</h3>
+		<ul>
+			<li><a href="https://play.google.com/store/apps/details?id=com.ubnt.usurvey&amp;hl=de">WiFiman</a></li>
+			<li><a href="https://f-droid.org/en/packages/com.aaronjwood.portauthority/">Port Authority</a></li>
+			<li><a href="https://f-droid.org/en/packages/info.lamatricexiste.network/">Network Discovery</a></li>
+			<li><a href="https://f-droid.org/en/packages/org.csploit.android/">csploit</a></li>
+		</ul>
+		<h3 id="wsl-windows-subsystem-for-linux">WSL (Windows Subsystem for Linux)</h3>
+		<ul>
+			<li><a href="https://docs.microsoft.com/en-us/windows/wsl/install-win10">https://docs.microsoft.com/en-us/windows/wsl/install-win10</a></li>
+			<li><a href="https://github.com/mikebattista/PowerShell-WSL-Interop">https://github.com/mikebattista/PowerShell-WSL-Interop</a></li>
+			<li><a href="https://devblogs.microsoft.com/commandline/integrate-linux-commands-into-windows-with-powershell-and-the-windows-subsystem-for-linux/">https://devblogs.microsoft.com/commandline/integrate-linux-commands-into-windows-with-powershell-and-the-windows-subsystem-for-linux/</a></li>
+			<li><a href="https://github.com/sirredbeard/Awesome-WSL">https://github.com/sirredbeard/Awesome-WSL - Awesome WSL link list</a></li>
+		</ul>
+	</section>
 	</div>
 	<div w3-include-html="footer.html"></div> 
-
-<script>
-includeHTML();
-</script> 
+	<script>
+		includeHTML();
+	</script> 
   </body>
 </html>
