--- a/programmierung.html
+++ b/programmierung.html
@@ -33,6 +33,7 @@
 
 <ul>
   <li><a href="https://marketplace.visualstudio.com/items?itemName=GitHub.GitHubExtensionforVisualStudio">Github Plugin für Visual Studio</a></li>
+  <li><a href="https://desktop.github.com/">Github Desktop</a></li>
 </ul>
 
 <h3 id="programmier-online-lernspiele">Programmier-Online-Lernspiele</h3>
