--- a/header.html
+++ b/header.html
@@ -9,6 +9,7 @@
 		<a href="/programmierung"><h2 class="header-link">Programmierung</h2></a>
 		<a href="/netzwerkadministration"><h2 class="header-link">Netzwerkadministration</h2></a>
 		<a href="/links"><h2 class="header-link">Links</h2></a>
+	    	<a href="/about"><h2 class="header-link">Über</h2></a>
 	</div>
   </div>
     <div class="container">
