--- a/links.html
+++ b/links.html
@@ -22,6 +22,7 @@
 		{"@type":"WebSite","url":"https://fiaep.github.io/","name":"Fachinformatiker (AE / SI) Prüfungsvorbereitung","headline":"Links","description":"Hier werden nützliche Links rund um das Thema Ausbildung zum Fachinformatiker gesammelt. Systemintegratoren sind selbstverständlich auch willkommen!","@context":"https://schema.org"}
 	</script>
 	<!-- End Jekyll SEO tag -->
+	<script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
   <body>
 	<div w3-include-html="header.html"></div>  
@@ -29,7 +30,7 @@
       <section id="main_content">
 		<h2 id="linksammlung">Linksammlung</h2>
 		<ul>
-			<li><a href="">https://github.com/wtsxDev/Penetration-Testing</a>Penetration-Testing Linksammlung</li>
+			<li><a href="">https://github.com/wtsxDev/Penetration-Testing</a> | Penetration-Testing Linksammlung</li>
 		</ul>
       </section>
 	</div>	
