--- a/berlinerplatz.html
+++ b/berlinerplatz.html
@@ -27,13 +27,15 @@
 <body>
 
 <div class="container-fluid">
-    <div class="row justify-content-center">
+    <div class="center-block">
+      <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="vvs-station" data-station="5000055" data-max-departure="400" data-whitelist-line="^U.*$"></div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="vvs-station" data-station="5006073" data-max-departure="400"></div>
         </div>
+      </div>
     </div>
 </div>
 
