--- a/berlinerplatz.html
+++ b/berlinerplatz.html
@@ -25,20 +25,18 @@
     </style>
 </head>
 <body>
-
+<center>
 <div class="container-fluid">
-    <div class="center-block">
-      <div class="row">
+    <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="vvs-station" data-station="5000055" data-max-departure="400" data-whitelist-line="^U.*$"></div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="vvs-station" data-station="5006073" data-max-departure="400"></div>
         </div>
-      </div>
     </div>
 </div>
-
+    </center>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.slim.min.js"></script>
 <script src="res/main.js"></script>
 <script>
