--- a/berlinerplatz.html
+++ b/berlinerplatz.html
@@ -22,6 +22,11 @@
         body {
             font-size: 2rem;
         }
+        
+        .center {
+            margin: 0 auto;
+            width: 80%;
+        }
     </style>
 </head>
 <body>
