--- a/berlinerplatz.html
+++ b/berlinerplatz.html
@@ -33,7 +33,7 @@
 <div class="container-fluid center">
     <div class="row center">
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-            <div class="vvs-station" data-station="5000055" data-max-departure="400" data-whitelist-line="^U.*$"></div>
+            <div class="vvs-station" data-station="5000055" data-max-departure="400" <!-- data-whitelist-line="^U.*$" --> ></div>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="vvs-station" data-station="5006073" data-max-departure="400"></div>
