--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
 	<div w3-include-html="header.html"></div>
 	<div class="container">
       <section id="main_content">	
-	<h2 id="andere-github-projekte-mit-bezug-zum-thema-fachinformatiker">Andere github Projekte mit Bezug zum Thema Fachinformatiker</h2>
-	<ul>
-		<li><a href="https://github.com/Gurkenschreck/FIAEP/wiki/Glossar">https://github.com/Gurkenschreck/FIAEP/wiki/Glossar</a></li>
-	</ul>
-	<h2 id="nachrichten">Nachrichten</h2>
+	<h2 id="nachrichten">IT News</h2>
 	<ul>
 		<li><a href="https://news.ycombinator.com">https://news.ycombinator.com</a></li>
 		<li><a href="https://heise.de">https://heise.de</a></li>
@@ -69,6 +65,14 @@
 			</tbody>
 		</table>
 		</li>
+	</ul>
+	<h2 id="andere-github-projekte-mit-bezug-zum-thema-fachinformatiker">Andere github Projekte mit Bezug zum Thema Fachinformatiker</h2>
+	<ul>
+		<li><a href="https://github.com/Gurkenschreck/FIAEP/wiki/Glossar">https://github.com/Gurkenschreck/FIAEP/wiki/Glossar</a></li>
+		<li><a href="https://github.com/ToxicTolerance/IHK-Observer">https://github.com/ToxicTolerance/IHK-Observer</a></li>
+		<li><a href="https://github.com/Blickfeldkurier/IHK-IT-Documentation-LaTeX-Template">https://github.com/Blickfeldkurier/IHK-IT-Documentation-LaTeX-Template<a/></li>
+		<li><a href="https://github.com/decepTicon666/Project">https://github.com/decepTicon666/Project<a/></li>
+		<li><a href="https://github.com/Ghostriderdede/innoApp/tree/master/inno-App"><a/>https://github.com/Ghostriderdede/innoApp/tree/master/inno-App</li>
 	</ul>
     </section>
     </div>    
