--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		<li><a href="https://github.com/ToxicTolerance/IHK-Observer">https://github.com/ToxicTolerance/IHK-Observer</a></li>
 		<li><a href="https://github.com/Blickfeldkurier/IHK-IT-Documentation-LaTeX-Template">https://github.com/Blickfeldkurier/IHK-IT-Documentation-LaTeX-Template<a/></li>
 		<li><a href="https://github.com/decepTicon666/Project">https://github.com/decepTicon666/Project<a/></li>
-		<li><a href="https://github.com/Ghostriderdede/innoApp/tree/master/inno-App"><a/>https://github.com/Ghostriderdede/innoApp/tree/master/inno-App</a></li>
+		<li><a href="https://github.com/Ghostriderdede/innoApp/tree/master/inno-App">https://github.com/Ghostriderdede/innoApp/tree/master/inno-App</a></li>
 	</ul>
     </section>
     </div>    
